--- a/default.config.yml
+++ b/default.config.yml
@@ -3,16 +3,12 @@ configure_terminal: yes
 configure_osx: yes
 configure_dotfiles: yes
 
-dotfiles_repo: https://github.com/DemisR/dotfiles.git
+dotfiles_repo: https://github.com/danielonthenet/dotfiles.git
 dotfiles_repo_accept_hostkey: yes
 dotfiles_repo_local_destination: ~/dotfiles
 dotfiles_files:
-  - .aliases
   - .zshrc
   - .gitconfig
-  - .gitignore_global
-  - .vimrc
-  - .vim
   - .osx
   - .functions
 
@@ -26,8 +22,7 @@ homebrew_installed_packages:
   - maven
   - python
   - python3
-  - sqlite
-  - phantomjs
+  - sqlite  
 # Shell Utilities 
   - coreutils
   - tree
@@ -36,16 +31,13 @@ homebrew_installed_packages:
   - knock
   - whatmask
   - wget
+  - antigen #package manager for zsh
+  - autojump
   - nmap
   - ssh-copy-id
   - openssl
   - pandoc
-  - telenet
 # Cloud
-  - aws-iam-authenticator
-  - bat
-  - azure-cli
-  - eksctl
 # DevOps
   - kubernetes-cli
   - kubernetes-helm
@@ -53,30 +45,20 @@ homebrew_installed_packages:
 
 homebrew_taps:
   - homebrew/core
-  - caskroom/cask
-  - homebrew/dupes
-  - homebrew/versions
+  - homebrew/cask
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
 # Messaging and co.
   - slack
-  - skype-for-business
-  - station
 # Browsers
   - google-chrome
   - firefox
 # Utilities
-  - 1password
   - vlc
-  - kap
-  - spotify
-  - caffeine
   - filezilla
   #- cyberduck
-  - dropbox
   - mas
-  - the-unarchiver
   #- microsoft-office
   #- licecap
   #- handbrake
@@ -117,48 +99,48 @@ mas_installed_app_ids:
 #mas_password: ""
 
 vscode_packages:
-  - vscoss.vscode-ansible # Ansible 
-  - mrmlnc.vscode-apache # Apache config
-  - shanoor.vscode-nginx # NGinx config
-  - HookyQR.beautify # Beautify code
-  - CoenraadS.bracket-pair-colorizer-2 # Colorizing matching brackets
-  - eamodio.gitlens # Supercharge Git 
-  - fatihacet.gitlab-workflow # Gitlab workflow integration
-  - akamud.vscode-theme-onedark # Theme
-  - file-icons.file-icons #Icons
-  - bmaupin.copy-without-formatting # Copy without formatting
-  - caarlos0.language-prometheus # Syntax highlight and snippets for Prometheus'
-  - christian-kohler.npm-intellisense # Autocomplete npm
-  - christian-kohler.path-intellisense # Autocompletes filenames
-  - DotJoshJohnson.xml # ML formatting
-  - EditorConfig.EditorConfig # EditorConfig Support
-  - eg2.vscode-npm-script # npm support
-  - esbenp.prettier-vscode # Prettier 
-  - formulahendry.code-runner # Run code from vscode
-  - Gruntfuggly.todo-tree # Show Todo Fixme 
-  - johnpapa.angular-essentials # Essential extensions for Angular developers
-  - johnpapa.Angular2 # Angular
-  - mauve.terraform # Terraform
-  - Mikael.Angular-BeastCode # Angular
-  - mitchdenny.ecdc # Encode and decode text selections
-  - ms-azuretools.vscode-docker # Linting for Dockerfile and docker-compose files
-  - ms-kubernetes-tools.vscode-kubernetes-tools # Kubernetes
-  - ms-python.python # Python
-  - ms-vscode.azure-account # Azure
-  - ms-vscode.azurecli # Azure
-  - ms-vscode.Go # Go lang
-  - ms-vscode.vscode-typescript-tslint-plugin # TSLint support 
-  - ms-vsliveshare.vsliveshare # Real-time collaborative development
-  - msjsdiag.debugger-for-chrome # Debugger for Chrome
-  - mtxr.sqltools # Database management
-  - natewallace.angular2-inline
-  - nhoizey.gremlins # Reveals some characters that can be harmful because they are invisible or looking like legitimate ones
-  - quicktype.quicktype # Copy JSON, paste as Go, TypeScript, C#, C++ and more
-  - redhat.vscode-yaml # Yaml language support
-  - samuelcolvin.jinjahtml # Syntax highlighting for jinja
-  - spywhere.guides # Guide lines
-  - tht13.python # Python language
-  - vilicvane.sensitive-replace # Sensitive replace
-  - VisualStudioExptTeam.vscodeintellicode # AI-assisted development
-  - wayou.vscode-todo-highlight # highlight TODOs, FIXMEs, and any keywords, annotation
-  - yzane.markdown-pdf # Convert Markdown to PDF
+  #- vscoss.vscode-ansible # Ansible 
+  #- mrmlnc.vscode-apache # Apache config
+  #- shanoor.vscode-nginx # NGinx config
+  #- HookyQR.beautify # Beautify code
+  #- CoenraadS.bracket-pair-colorizer-2 # Colorizing matching brackets
+  #- eamodio.gitlens # Supercharge Git 
+  #- fatihacet.gitlab-workflow # Gitlab workflow integration
+  #- akamud.vscode-theme-onedark # Theme
+  #- file-icons.file-icons #Icons
+  #- bmaupin.copy-without-formatting # Copy without formatting
+  #- caarlos0.language-prometheus # Syntax highlight and snippets for Prometheus'
+  #- christian-kohler.npm-intellisense # Autocomplete npm
+  #- christian-kohler.path-intellisense # Autocompletes filenames
+  #- DotJoshJohnson.xml # ML formatting
+  #- EditorConfig.EditorConfig # EditorConfig Support
+  #- eg2.vscode-npm-script # npm support
+  #- esbenp.prettier-vscode # Prettier 
+  #- formulahendry.code-runner # Run code from vscode
+  #- Gruntfuggly.todo-tree # Show Todo Fixme 
+  #- johnpapa.angular-essentials # Essential extensions for Angular developers
+  #- johnpapa.Angular2 # Angular
+  #- mauve.terraform # Terraform
+  #- Mikael.Angular-BeastCode # Angular
+  #- mitchdenny.ecdc # Encode and decode text selections
+  #- ms-azuretools.vscode-docker # Linting for Dockerfile and docker-compose files
+  #- ms-kubernetes-tools.vscode-kubernetes-tools # Kubernetes
+  #- ms-python.python # Python
+  #- ms-vscode.azure-account # Azure
+  #- ms-vscode.azurecli # Azure
+  #- ms-vscode.Go # Go lang
+  #- ms-vscode.vscode-typescript-tslint-plugin # TSLint support 
+  #- ms-vsliveshare.vsliveshare # Real-time collaborative development
+  #- msjsdiag.debugger-for-chrome # Debugger for Chrome
+  #- mtxr.sqltools # Database management
+  #- natewallace.angular2-inline
+  #- nhoizey.gremlins # Reveals some characters that can be harmful because they are invisible or looking like legitimate ones
+  #- quicktype.quicktype # Copy JSON, paste as Go, TypeScript, C#, C++ and more
+  #- redhat.vscode-yaml # Yaml language support
+  #- samuelcolvin.jinjahtml # Syntax highlighting for jinja
+  #- spywhere.guides # Guide lines
+  #- tht13.python # Python language
+  #- vilicvane.sensitive-replace # Sensitive replace
+  #- VisualStudioExptTeam.vscodeintellicode # AI-assisted development
+  #- wayou.vscode-todo-highlight # highlight TODOs, FIXMEs, and any keywords, annotation
+  #- yzane.markdown-pdf # Convert Markdown to PDF
